# algebraic-data-types

./: CMakeLists.txt  README.md
src/: main.c  types.h
