# cmake -S . -B build/

CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
SET(CMAKE_C_COMPILER "gcc")
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -Wpedantic")

PROJECT(algebraic-data-types)
SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)

# Add source files
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/src/*)

FILE(GLOB SOURCES ${PROJECT_SOURCE_DIR}/src/*.c ${PROJECT_SOURCE_DIR}/src/*/*.c)
FILE(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/src/*.h ${PROJECT_SOURCE_DIR}/src/*/*.h)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${HEADER_FILES})
